--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,3 +2,23 @@ stages:
   - install
   - test
   - build
+  - publish
+
+install-dependencies:
+  stage: install
+
+testing:
+  stage: test
+  script:
+    - echo "testing"
+
+build-docker-image:
+  stage: build
+  before-script:
+    - export IMAGE_VERSION=$(cat info.json | jq -r .version)
+  script:
+    - docker build --build-arg TARGET_NAME=FunctionCalling -t grounding-dino-server:$IMAGE_VERSION .
+    - docker build --build-arg TARGET_NAME=VisionAssistant -t vision-assistant-server:$IMAGE_VERSION .
+
+# push-to-registry:
+#   stage: publish
