--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ build-docker-image:
   before_script:
     - export IMAGE_VERSION=$(cat info.json | jq -r .version)
   script:
-    - docker build --build-arg TARGET_NAME=VisionAssistant -t vision-assistant-server:$IMAGE_VERSION .
+    - docker build --build-arg TARGET_NAME=VisionAssistant -t visionassistantserver:$IMAGE_VERSION .
     # - docker build --build-arg TARGET_NAME=FunctionCalling -t grounding-dino-server:$IMAGE_VERSION .
 
 # push-to-registry:
