ci: modify gitlab file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,10 @@
-variables:
-  DOCKER_RIGISTRY: registry.gitlab.com/maxwutw/tsmc_hackathon
-  DOCKER_DRIVER: overlay2
+image: $DOCKER_REGISTRY:latest
 
-image: $DOCKER_RIGISTRY:latest
+variables:
+  DOCKER_REGISTRY: registry.gitlab.com/maxwutw/tsmc_hackathon
+  DOCKER_DRIVER: overlay2
+  DOCKER_HOST: tcp://docker:2375
+  DOCKER_TLS_CERTDIR: ""
 
 services:
   - docker:dind
@@ -25,7 +27,9 @@ testing:
 
 build-docker-image:
   stage: build
+  image: docker:latest
   before_script:
+    - apt update && apt install -y jq
     - export IMAGE_VERSION=$(cat info.json | jq -r .version || echo "latest")
     - docker --version
   script:
