--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ testing:
 build-docker-image:
   stage: build
   image: docker:latest
-  before-script:
+  before_script:
     - apt update && apt install -y jq
     - export IMAGE_VERSION=$(cat info.json | jq -r .version || echo "latest")
     - docker --version
@@ -44,7 +44,7 @@ build-docker-image:
 push-to-registry:
   stage: publish
   image: google/cloud-sdk:latest
-  before-script:
+  before_script:
     - echo "$GCP_SERVICE_ACCOUNT_KEY" > /tmp/gcp-key.json
     - gcloud auth activate-service-account --key-file=/tmp/gcp-key.json
     - gcloud auth configure-docker ${GCP_REGISTRY_LOCATION}-docker.pkg.dev --quiet
