fix: yaml fixed

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,9 +35,10 @@ build-docker-image:
   image: docker:latest
   before_script:
     - apt update && apt install -y jq
-    - export IMAGE_VERSION=$(cat info.json | jq -r .version || echo "latest")
     - docker --version
+    - export IMAGE_VERSION=$(cat info.json | jq -r .version || echo "latest")
   script:
+    - echo "$IMAGE_VERSION"
     - docker build --build-arg TARGET_NAME=visionassistant -t ${GCP_REGISTRY_LOCATION}-docker.pkg.dev/${GCP_PROJECT_ID}/${GCP_REGISTRY_NAME}/visionassistantserver:$IMAGE_VERSION .
     - docker build --build-arg TARGET_NAME=functioncalling -t ${GCP_REGISTRY_LOCATION}-docker.pkg.dev/${GCP_PROJECT_ID}/${GCP_REGISTRY_NAME}/functioncallingserver:$IMAGE_VERSION .
 
