feat: kubernetes yaml file setup

--- a/.gitlab_cpy.yml
+++ b/.gitlab_cpy.yml
@@ -22,15 +22,6 @@ stages:
   - build
   - deploy
 
-.auth: &auth
-  before_script:
-    - apk update && apk add jq
-    - docker --version
-    - echo "$GCP_SERVICE_ACCOUNT_KEY" > /tmp/gcp-key.json
-    - gcloud auth activate-service-account --key-file=/tmp/gcp-key.json
-    - gcloud auth configure-docker ${GCP_REGISTRY_LOCATION}-docker.pkg.dev --quiet
-    - export IMAGE_VERSION=$(cat info.json | jq -r .version || echo "latest")
-
 install-dependencies:
   stage: install
   script:
@@ -44,7 +35,13 @@ testing:
 build-and-push-docker-image:
   stage: build
   image: google/cloud-sdk:latest
-  <<: *auth
+  before_script:
+    - apk update && apk add jq
+    - docker --version
+    - echo "$GCP_SERVICE_ACCOUNT_KEY" > /tmp/gcp-key.json
+    - gcloud auth activate-service-account --key-file=/tmp/gcp-key.json
+    - gcloud auth configure-docker ${GCP_REGISTRY_LOCATION}-docker.pkg.dev --quiet
+    - export IMAGE_VERSION=$(cat info.json | jq -r .version || echo "latest")
   script:
     - echo "$IMAGE_VERSION"
     - docker build --build-arg TARGET_NAME=visionassistant -t $VISION_IMAGE:$IMAGE_VERSION .
@@ -52,23 +49,23 @@ build-and-push-docker-image:
     - docker build --build-arg TARGET_NAME=functioncalling -t $FUNCTION_IMAGE:$IMAGE_VERSION .
     - docker push $FUNCTION_IMAGE:$IMAGE_VERSION
 
-push-to-registry:
-  stage: publish
-  image: google/cloud-sdk:latest
-  before_script:
-    - apt update && apt install -y jq docker.io
-    - echo "$GCP_SERVICE_ACCOUNT_KEY" > /tmp/gcp-key.json
-    - gcloud auth activate-service-account --key-file=/tmp/gcp-key.json
-    - gcloud auth configure-docker ${GCP_REGISTRY_LOCATION}-docker.pkg.dev --quiet
-    - export IMAGE_VERSION=$(cat info.json | jq -r .version || echo "latest")
-  script:
-    - echo "$IMAGE_VERSION"
-    - docker load < vision.tar
-    - docker load < function.tar
-    - docker push $VISION_IMAGE:$IMAGE_VERSION
-    - docker push $FUNCTION_IMAGE:$IMAGE_VERSION
+# push-to-registry:
+#   stage: publish
+#   image: google/cloud-sdk:latest
+#   before_script:
+#     - apt update && apt install -y jq docker.io
+#     - echo "$GCP_SERVICE_ACCOUNT_KEY" > /tmp/gcp-key.json
+#     - gcloud auth activate-service-account --key-file=/tmp/gcp-key.json
+#     - gcloud auth configure-docker ${GCP_REGISTRY_LOCATION}-docker.pkg.dev --quiet
+#     - export IMAGE_VERSION=$(cat info.json | jq -r .version || echo "latest")
+#   script:
+#     - echo "$IMAGE_VERSION"
+#     - docker load < vision.tar
+#     - docker load < function.tar
+#     - docker push $VISION_IMAGE:$IMAGE_VERSION
+#     - docker push $FUNCTION_IMAGE:$IMAGE_VERSION
  
 deploy-to-gcp:
   stage: deploy
-  image: google/cloud.sdk:latest
+
 
