--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,37 +32,35 @@ testing:
   script:
     - echo "testing"
 
-build-docker-image:
+build-and-push-docker-image:
   stage: build
-  image: docker:latest
+  image: google/cloud-sdk:latest
   before_script:
     - apk update && apk add jq
     - docker --version
-    - export IMAGE_VERSION=$(cat info.json | jq -r .version || echo "latest")
-  script:
-    - echo "$IMAGE_VERSION"
-    - docker build --build-arg TARGET_NAME=visionassistant -t $VISION_IMAGE:$IMAGE_VERSION .
-    - docker build --build-arg TARGET_NAME=functioncalling -t $FUNCTION_IMAGE:$IMAGE_VERSION .
-    - docker save $VISION_IMAGE:$IMAGE_VERSION > vision.tar
-    - docker save $FUNCTION_IMAGE:$IMAGE_VERSION > function.tar
-  artifacts:
-    paths:
-      - vision.tar
-      - fucntion.tar
-
-push-to-registry:
-  stage: publish
-  image: google/cloud-sdk:latest
-  before_script:
-    - apt update && apt install -y jq docker.io
-    - echo "$GCP_SERVICE_ACCOUNT_KEY" > /tmp/gcp-key.json
     - gcloud auth activate-service-account --key-file=/tmp/gcp-key.json
     - gcloud auth configure-docker ${GCP_REGISTRY_LOCATION}-docker.pkg.dev --quiet
     - export IMAGE_VERSION=$(cat info.json | jq -r .version || echo "latest")
   script:
     - echo "$IMAGE_VERSION"
-    - docker load < vision.tar
-    - docker load < function.tar
+    - docker build --build-arg TARGET_NAME=visionassistant -t $VISION_IMAGE:$IMAGE_VERSION .
     - docker push $VISION_IMAGE:$IMAGE_VERSION
+    - docker build --build-arg TARGET_NAME=functioncalling -t $FUNCTION_IMAGE:$IMAGE_VERSION .
     - docker push $FUNCTION_IMAGE:$IMAGE_VERSION
 
+# push-to-registry:
+#   stage: publish
+#   image: google/cloud-sdk:latest
+#   before_script:
+#     - apt update && apt install -y jq docker.io
+#     - echo "$GCP_SERVICE_ACCOUNT_KEY" > /tmp/gcp-key.json
+#     - gcloud auth activate-service-account --key-file=/tmp/gcp-key.json
+#     - gcloud auth configure-docker ${GCP_REGISTRY_LOCATION}-docker.pkg.dev --quiet
+#     - export IMAGE_VERSION=$(cat info.json | jq -r .version || echo "latest")
+#   script:
+#     - echo "$IMAGE_VERSION"
+#     - docker load < vision.tar
+#     - docker load < function.tar
+#     - docker push $VISION_IMAGE:$IMAGE_VERSION
+#     - docker push $FUNCTION_IMAGE:$IMAGE_VERSION
+# 
