--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,7 @@ build-and-push-docker-image:
   before_script:
     - apk update && apk add jq
     - docker --version
+    - echo "$GCP_SERVICE_ACCOUNT_KEY" > /tmp/gcp-key.json
     - gcloud auth activate-service-account --key-file=/tmp/gcp-key.json
     - gcloud auth configure-docker ${GCP_REGISTRY_LOCATION}-docker.pkg.dev --quiet
     - export IMAGE_VERSION=$(cat info.json | jq -r .version || echo "latest")
