--- a/kubernetes/functioncalling.yaml
+++ b/kubernetes/functioncalling.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: functioncalling-service
-        image: registry.gitlab.com/maxwutw/functioncalling
+        image: ${GCP_REGISTRY_LOCATION}-docker.pkg.dev/${GCP_PROJECT_ID}/${GCP_REGISTRY_NAME}/functioncallingserver:latest
         ports: 
         - containerPort: 8002
         resources:
@@ -42,11 +42,13 @@ kind: Service
 metadata:
   name: functioncalling-service
 spec:
+  type: NodePort
   selector:
     app: functioncalling-service
   ports:
   - port: 8002
     targetPort: 8002
+    nodePort: 8002
   type: ClusterIP
 
 
