--- a/kubernetes/visionassistant.yaml
+++ b/kubernetes/visionassistant.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: visionassistant-service
-        image: registry.gitlab.com/maxwutw/tsmc_hackathon:latest
+        image: ${GCP_REGISTRY_LOCATION}-docker.pkg.dev/${GCP_PROJECT_ID}/${GCP_REGISTRY_NAME}/visionassistantserver:latest
         ports: 
         - containerPort: 8001
         resources:
@@ -42,11 +42,13 @@ kind: Service
 metadata:
   name: visionassistant-service
 spec:
+  type: NodePort
   selector:
     app: visionassistant-service
   ports:
   - port: 8001
     targetPort: 8001
+    nodePort: 8001
   type: ClusterIP
 
 
