--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,7 +48,7 @@ install-dependencies:
 
 testing:
   stage: test
-  image: python:3.9
+  image: google/cloud-sdk:latest
   <<: *auth
   dependencies:
     - install-dependencies
@@ -58,13 +58,14 @@ testing:
   #   - name: $FUNCTION_IMAGE:latest
   #     alias: function-service
   before_script:
-    - *auth
+    - apt-get update && apt-get install -y python3-pip
     - pip install pytest requests
-    # Start your services
+    - pip install pytest requests
+
     - echo "$GCP_SERVICE_ACCOUNT_KEY" > va/tsmccareerhack2025.json
     - python -m tool/api_service.py &
     - gunicorn -c va/service/vaGunicornConfig.py service.vaApp:app &
-    # Wait for services to be ready
+
     - sleep 10
   script:
     - pytest tests/test_inpainting_service.py -v
