--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,7 +48,7 @@ install-dependencies:
 
 testing:
   stage: test
-  image: google/cloud-sdk:latest
+  image: python:3.9
   <<: *auth
   dependencies:
     - install-dependencies
@@ -58,8 +58,7 @@ testing:
   #   - name: $FUNCTION_IMAGE:latest
   #     alias: function-service
   before_script:
-    - apt-get update && apt-get install -y python3-pip
-    - pip install pytest requests
+    # - apt-get update && apt-get install -y python3-pip
     - pip install pytest requests
 
     - echo "$GCP_SERVICE_ACCOUNT_KEY" > va/tsmccareerhack2025.json
@@ -70,7 +69,6 @@ testing:
   script:
     - pytest tests/test_inpainting_service.py -v
     - pytest tests/test_imagen_service.py -v
-    - pytest tests/test_dino_service.py -v
     - pytest tests/test_va_service.py -v
   after_script:
     # - pkill -f "python -m service"
