--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,38 +50,41 @@ install-dependencies:
 testing:
   stage: test
   image: python:3.9
-  <<: *auth
   dependencies:
     - install-dependencies
-  # services:
-  #   - name: $VISION_IMAGE:latest
-  #     alias: vision-service
-  #   - name: $FUNCTION_IMAGE:latest
-  #     alias: function-service
   before_script:
-    # - apt-get update && apt-get install -y python3-pip
+    - apt-get update && apt-get install -y netcat-traditional
     - pip install -r requirements-test.txt
   script:
-    - echo "$GCP_SERVICE_ACCOUNT_KEY" > va/tsmccareerhack2025.json
-    - ls -la
-    - ls -la tool/
-    - ls -la va/
+    # Start first service (api_service.py)
     - cd tool/
     - python -m api_service.py &
-    - cd ../
-    - cd va/
+    - API_SERVICE_PID=$!
+    
+    # Wait for api_service to be ready
+    - timeout 30 bash -c 'until nc -z localhost 8002; do sleep 1; done'
+    
+    # Start second service (vaApp)
+    - cd ../va/
     - gunicorn -c service/vaGunicornConfig.py service.vaApp:app &
-    - cd ../
-
-    - sleep 10
-    - ps aux | grep python
-    - netstat -tlpn || echo "netstat not available"
+    - GUNICORN_PID=$!
+    
+    # Wait for gunicorn to be ready
+    - timeout 30 bash -c 'until nc -z localhost 8001; do sleep 1; done'
+    
+    # Run tests
+    - cd ..
     - pytest tests/test_inpainting_service.py -v
     - pytest tests/test_imagen_service.py -v
     - pytest tests/test_va_service.py -v
-  # after_script:
-    # - pkill -f "python -m service"
-    # - pkill -f "gunicorn"
+  after_script:
+    - pkill -f "python -m api_service"
+    - pkill -f "gunicorn"
+  artifacts:
+    when: on_failure
+    paths:
+      - tests/logs/
+    expire_in: 1 week
 
 build-and-push-docker-image:
   stage: build
