--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,14 +57,13 @@ testing:
     - pip install -r requirements-test.txt
     # Start services
     - cd tool/
-    - python -m api_service &
-    - python -m inpainting_service &
+    - python3 -m api_service &
+    - python3 -m inpainting_service &
     - sleep 5
     - cd ..
     # Run tests
     - cd tests
     - pytest test_inpainting_service.py -v || true
-    - pytest test_imagen_service.py -v || true
     - pytest test_va_service.py -v || true
 
 build-and-push-docker-image:
