--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,6 +53,7 @@ testing:
   stage: test
   image: python:3.9
   script:
+    - pyenv activate myenv
     - pip install pytest requests pillow
     - pip install -r requirements-test.txt
     # Start services
